--- a/src/main/resources/assets/britishcolumbiamod/lang/en_us.json
+++ b/src/main/resources/assets/britishcolumbiamod/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.britishcolumbiamod.goose_egg": "Goose Egg",
   "item.britishcolumbiamod.goose_feather": "Goose Feather",
 
+  "block.britishcolumbiamod.cedar_log": "Cedar Log",
+
   "creativetab.bcmod_tab": "BCMod"
 }
