Added new block and recipes

--- a/src/main/resources/assets/britishcolumbiamod/lang/en_us.json
+++ b/src/main/resources/assets/britishcolumbiamod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.britishcolumbiamod.goose_feather": "Goose Feather",
 
   "block.britishcolumbiamod.cedar_log": "Cedar Log",
+  "block.britishcolumbiamod.cedar_planks": "Cedar Planks",
 
   "creativetab.bcmod_tab": "BCMod"
 }
