--- a/src/main/resources/assets/britishcolumbiamod/lang/en_us.json
+++ b/src/main/resources/assets/britishcolumbiamod/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.britishcolumbiamod.goose_feather": "Goose Feather",
   "item.britishcolumbiamod.rhodinite": "Rhodinite",
   "item.britishcolumbiamod.metal_detector": "Metal Detector",
+  "item.britishcolumbiamod.saskatoon_berry": "Saskatoon Berry",
+  "item.britishcolumbiamod.snowberry": "Snowberry",
 
   "block.britishcolumbiamod.cedar_log": "Cedar Log",
   "block.britishcolumbiamod.cedar_planks": "Cedar Planks",
