Completed the cedar woodset

--- a/src/main/resources/assets/britishcolumbiamod/lang/en_us.json
+++ b/src/main/resources/assets/britishcolumbiamod/lang/en_us.json
@@ -10,6 +10,14 @@
 
   "block.britishcolumbiamod.cedar_log": "Cedar Log",
   "block.britishcolumbiamod.cedar_planks": "Cedar Planks",
+  "block.britishcolumbiamod.cedar_stairs": "Cedar Stairs",
+  "block.britishcolumbiamod.cedar_slab": "Cedar Slab",
+  "block.britishcolumbiamod.cedar_pressure_plate": "Cedar Pressure Plate",
+  "block.britishcolumbiamod.cedar_button": "Cedar Button",
+  "block.britishcolumbiamod.cedar_fence": "Cedar Fence",
+  "block.britishcolumbiamod.cedar_fence_gate": "Cedar Fence Gate",
+  "block.britishcolumbiamod.cedar_door": "Cedar Door",
+  "block.britishcolumbiamod.cedar_trapdoor": "Cedar Trapdoor",
   "block.britishcolumbiamod.rhodonite_ore": "Rhodonite Ore",
   "block.britishcolumbiamod.rhodonite_block": "Block Of Rhodonite",
 
